--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -14,6 +14,7 @@
         flex-grow: 1;
         overflow: hidden;
         min-height: 0;
+        position: relative;
     }
 
     canvas#hexGridCanvas {
