--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -20,6 +20,7 @@ screen and (pointer: coarse) and (hover: none) {
         min-height: 0;
         /* Important for flex-children sizing */
         overflow: hidden;
+        position: relative;
         /* Prevent canvas from overflowing */
     }
 
