--- a/src/styles/LearningPanel.css
+++ b/src/styles/LearningPanel.css
@@ -7,10 +7,10 @@
 .learning-center-list {
     list-style: none;
     padding: 0;
-    margin: 10px 0 0 0;
+    margin: 0;
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 0px;
 }
 
 .learning-center-item {
