--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
 @import url('src/ui/components/PopoutPanel.css');
 @import url('src/ui/components/BottomSheet.css');
 @import url('src/ui/components/LearningPanel.css');
+@import url('src/ui/components/RulesetActionsComponent.css');
 
 /* 5. Feature-Specific Panel Components */
 @import url('src/ui/components/RulesetEditor.css');
