--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
+:root {
+    --bottom-tab-bar-height: 60px;
+}
+
 *,
 *::before,
 *::after {
@@ -10,7 +14,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     color: #e0e0e0;
     display: flex;
-    height: 100vh;
+    height: 100dvh;
     overflow: hidden;
     padding-bottom: env(safe-area-inset-bottom, 10px);
     padding-left: env(safe-area-inset-left);
