--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -69,10 +69,9 @@ screen and (pointer: coarse) and (hover: none) {
     /* --- Bottom Tab Bar --- */
     #bottom-tab-bar {
         display: flex;
-        margin-bottom: 50px;
         order: 3;
         width: 100%;
-        height: 60px;
+        height: var(--bottom-tab-bar-height);
         background-color: #2a2a2a;
         border-top: 1px solid #444;
         flex-shrink: 0;
