--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@
 @import url('src/ui/components/BottomSheet.css');
 @import url('src/ui/components/LearningComponent.css');
 @import url('src/ui/components/RulesetActionsComponent.css');
+@import url('src/ui/components/SaveRulesetModal.css');
+@import url('src/ui/components/ActionsPopover.css');
 
 /* 5. Feature-Specific Panel Components */
 @import url('src/ui/components/RulesetEditor.css');
