--- a/src/ui/components/RulesetActionsComponent.css
+++ b/src/ui/components/RulesetActionsComponent.css
@@ -174,6 +174,16 @@
     margin-bottom: 5px;
 }
 
+.library-item .viz-placeholder, .library-item .ruleset-viz-svg {
+    width: 24px;
+    height: 48px;
+    flex-shrink: 0;
+    margin-right: 10px;
+    background-color: #111;
+    border: 1px solid #555;
+    border-radius: 2px;
+}
+
 .library-item-info {
     flex-grow: 1;
     margin-right: 10px;
