Custom colors Checkpoint 1

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
 @import url('src/ui/components/BottomSheet.css');
 @import url('src/ui/components/LearningComponent.css');
 @import url('src/ui/components/RulesetActionsComponent.css');
+@import url('src/ui/components/ChromaLabComponent.css');
 @import url('src/ui/components/SaveRulesetModal.css');
 @import url('src/ui/components/ActionsPopover.css');
 
