scrollbar styling, removed broken hotkeys

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,3 +74,21 @@ body {
 #fileInput { 
     display: none; 
 }
+
+::-webkit-scrollbar {
+  width: 3px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ffffff55;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #f0f0f0;
+}
