--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 @import url('src/ui/components/SaveRulesetModal.css');
 @import url('src/ui/components/InitialStateConfigModal.css');
 @import url('src/ui/components/ActionsPopover.css');
+@import url('src/styles/Toast.css');
 
 /* 5. Feature-Specific Panel Components */
 @import url('src/ui/components/RulesetEditor.css');
